@@ -9,9 +9,11 @@ import com.ssafy.storyboat.domain.studio.dto.Invitation.InvitationFindOneRespons
 import com.ssafy.storyboat.domain.studio.dto.Invitation.InvitationSaveRequest;
 import com.ssafy.storyboat.domain.studio.entity.Invitation;
 import com.ssafy.storyboat.domain.studio.entity.InvitationCode;
-import com.ssafy.storyboat.domain.tag.dto.ProfileTagUpdateRequest;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
@@ -35,11 +37,14 @@ public class InvitationController {
      * @return
      */
     @GetMapping
-    public ResponseEntity<?> findAllInvitations() {
-        List<Invitation> invitations = invitationService.findAll();
-        List<InvitationFindAllResponse> result = invitations.stream()
+    public ResponseEntity<?> findAllInvitations(Pageable pageable) {
+        Page<Invitation> invitations = invitationService.findAll(pageable);
+
+        List<InvitationFindAllResponse> responseList = invitations.stream()
                 .map(InvitationFindAllResponse::new)
-                .toList();
+                .collect(Collectors.toList());
+        Page<InvitationFindAllResponse> result = new PageImpl<>(responseList, pageable, invitations.getTotalElements());
+
         return ResponseEntity.ok().body(ApiResponse.success(result, "모집글 전체 조회"));
     }
 
